--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -1,3 +1,46 @@
 body {
     padding: 10px;
 }
+
+.container {
+    border: 1px solid black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 10px;
+    margin-left: 5px;
+    width: 100%;
+}
+
+.container a {
+    text-decoration: none;
+    color: white;
+}
+
+.container a:hover {
+    text-decoration: underline;
+}
+
+.container a img {
+    max-width: 200px;
+    height: 200px;
+}
+
+.auction {
+    border: 1px solid black;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 10px;
+    margin-left: 5px;
+    width: 100%;
+}
+
+.auction-cont img {
+    width: 200px;
+    height: 200px;
+}
