--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -1,11 +1,15 @@
 {% extends "auctions/layout.html" %}
-
+{% load static %}
 {% block body %}
     {% for listing in listings %}
-        <div>
+        <div class="container">
             <a href="{% url 'listingView' listing.id %}">
             <h3>{{ listing.title }}</h3>
+            {% if not listing.image_url %}
+                <img src="{% static 'images/no-image.jpg' %}" alt="">
+            {% else %}
             <img src="{{ listing.image_url }}" alt="">
+            {% endif %}
             <p>{{ listing.description}}</p>
             <p>Starting Bid: ${{ listing.starting_bid}}</p>
             </a>    
