--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -39,7 +39,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
                 </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'myAuctions' %}">My Auctions</a>
+                </li>
             {% endif%}
+
+           
         </ul>
         <hr>
         {% block body %}
