--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -1,46 +1,309 @@
 body {
     padding: 10px;
-}
-
-.container {
-    border: 1px solid black;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    gap: 10px;
-    margin-left: 5px;
-    width: 100%;
-}
-
-.container a {
-    text-decoration: none;
+    font-size: 16px;
+    background-color: #181a1b;
     color: white;
 }
 
-.container a:hover {
-    text-decoration: underline;
+.container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
 }
 
-.container a img {
-    max-width: 200px;
-    height: 200px;
+.item {
+    border: 1px solid #ccc;
+    height: 365px;
+    transition: scale 0.3s;
+    color: #caa810;
+    border-radius: 10px;
+    width: 100%;
+    overflow: hidden;
+    
 }
 
-.auction {
-    border: 1px solid black;
-    padding: 10px;
+.item:hover {
+    scale: 1.05;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    color: #daf107;
+}
+
+.item img {
+    width: 100%;
+    height: 190px;
+    border-radius: 5px;
+    object-fit: cover;
+}
+
+.item-down {
+    margin: 5px;
+    
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.item-down:last-child {
+    font-weight: bolder;
+}
+
+.time-stamp, .comment-time {
+    font-size: 12px;
+    color: gray;
+}
+
+.description {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
+
+.auction-item {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    gap: 10px;
-    margin-left: 5px;
-    width: 100%;
+    gap: 5px;
+}
+
+.auction-cont {
+    display: flex;
+    border: 1px solid #e0ba0d;
+    border-radius: 5px;
+    gap: 3px;
+    box-shadow: 1px 1px 10px #e0ba0d !important;
+    
 }
 
 .auction-cont img {
+    width: 330px;
+    border-radius: 5px;
+}
+
+.item-bid {
+    font-weight: bolder;
+}
+
+#bid {
+    border: 1px solid gray;
+    border-radius: 5px;
+    background-color: #181a1b;
+    color: white;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+#bid-form {
+    margin-top: 5px;
+}
+
+.btn-auction {
+    background-color: #e0ba0d !important;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 2px;
+    transition: scale 0.3s;
+}
+
+.btn-auction:hover {
+    scale: calc(1.08);
+}
+
+
+/*overriding the botstrap*/
+.nav-item a {
+    color: #d3bf0c;
+}
+
+.nav-item a:hover {
+    color: #f0e68c;
+}
+
+.cont-btn {
+    display: flex;
+    gap: 15px;
+    margin-top: 10px;
+}
+
+.cont-comments {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#comment {
+    width: 60%;
+    height: 100px;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 14px;
+    background-color: #181a1b;
+    color: white;
+}
+
+#form-comment {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+#submit {
+    width: 100px;
+    padding: 3px;
+    border-radius: 5px;
+    background-color: #e0ba0d;
+    font-weight: bold;
+    transition: scale 0.3s;
+}
+
+#submit:hover {
+    scale: 1.1;
+}
+
+.commenter {
+    display: flex;
+    gap: 7px;
+}
+
+.commenter p {
+    font-weight: bolder;
+}
+
+.box-comm {
+    border: 1px solid rgb(143, 142, 142);
+    padding: 1px 5px 1px 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.num-bids {
+    font-weight: bolder;
+    margin-bottom: 0;
+}
+
+.form-add {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 40%;
+    margin: auto;
+    border: 1px solid rgb(2, 2, 2);
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #e0ba0d !important;
+}
+
+.form-add > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+    color: #e0ba0d;
+}
+
+.form-add input {
+    font-size: 16px;
+    background-color: #181a1b;
+    color: white;
+    border: 1px solid rgb(196, 194, 194);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.form-add label {
+    font-weight: bolder;
+}
+
+.form-add input[type="submit"] {
+    margin-top: 10px !important;
     width: 200px;
-    height: 200px;
+    margin: auto;
+    background-color: #e0ba0d;
+    font-weight: bold;
+    border: none;
+    transition: scale 0.3s;
+    color: black;
+}
+
+.categories-cont {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.categories-cont > a {
+    border: 1px solid #ccc;
+    height: 80px;
+    transition: scale 0.3s;
+    color: #caa810;
+    border-radius: 10px;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: #272724;
+    font-weight: bolder;
+}
+
+.categories-cont > a:hover {
+    scale: calc(1.1);
+}
+
+/* mobile responsive */
+@media (max-width: 768px) {
+    body {
+        padding: 0;
+    }
+
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5px;
+    }
+
+    .auction-item {
+        width: 96%;
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+
+    .auction-cont {
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid grey;
+        box-shadow: none !important;
+    }
+
+    .auction-cont img {
+        width: 100%;
+    }
+
+    .cont-comments {
+        width: 97%;
+        margin: auto;
+    }
+
+    .form-add {
+        width: 95%;
+        box-shadow: none !important;
+        border: 1px solid grey;
+    }
+
+    .categories-cont {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
+    }
+
+    .categories-cont > a {
+        width: 95%;
+        height: 100px;
+    }
+
+    .item {
+        height: auto;
+    }
+
 }
