--- a/commerce/auctions/templates/auctions/editAuction.html
+++ b/commerce/auctions/templates/auctions/editAuction.html
@@ -1,9 +1,22 @@
-{% extends "auction/layout.html" %}
+{% extends "auctions/layout.html" %}
 
 {% block title %}
     Edit Auction
 {% endblock %}
 
 {% block body %}
-    <p>hiwewad</p>
+    <form action="{% url 'editAuction' auction.id %}" method="POST">
+        {% csrf_token %}
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" value="{{ auction.title }}" required>
+        <label for="desc">Description</label>
+        <textarea type="text" id="description" name="description"required>
+            {{ auction.description }}
+        </textarea>
+        <label for="img-url">Image URL (Optional)</label>
+        <input type="text" name="img-url" id="img-url" value="{{ auction.image_url }}">
+        <label for="category">Category (Optional)</label>
+        <input type="text" name="category" id="category" value="{{ auction.category }}">
+        <input type="submit" value="Save">
+    </form>
 {% endblock %}
